// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser.js csvReader 1`] = `
{
  "data": [
    {
      "description": "Статический анализатор кода",
      "moved": "0",
      "name": "codeclimate",
      "quadrant": "tools",
      "ring": "Trial",
    },
    {
      "description": "",
      "moved": "",
      "name": "Nodejs",
      "quadrant": "Platforms",
      "ring": "Adopt",
    },
    {
      "description": "Статически, типизированный ЖС",
      "moved": "1",
      "name": "TypeScript",
      "quadrant": "language",
      "ring": "Adopt",
    },
    {
      "description": "Унификации контракта интерфейсов различных слоев приложений",
      "moved": "-1",
      "name": "Гексагональная архитектура",
      "quadrant": "Techniques",
      "ring": "Assess",
    },
  ],
  "meta": {
    "date": "2021-06-18",
    "legend": "bla bla bla",
    "title": "work it",
  },
  "quadrantAliases": {
    "language": "q1",
    "languages-and-frameworks": "q1",
    "platforms": "q2",
    "techniques": "q4",
    "tools": "q3",
  },
  "quadrantTitles": {
    "q1": "Languages and frameworks",
    "q2": "Platforms",
    "q3": "Tools",
    "q4": "Techniques",
  },
}
`;

exports[`parser.js jsonReader 1`] = `
{
  "data": [
    {
      "description": "Статически типизированный ЖС",
      "moved": "1",
      "name": "TypeScript",
      "quadrant": "languages-and-frameworks",
      "ring": "Adopt",
    },
    {
      "description": "",
      "moved": "",
      "name": "Nodejs",
      "quadrant": "Platforms",
      "ring": "Adopt",
    },
    {
      "description": "Статический анализатор кода",
      "moved": "0",
      "name": "codeclimate",
      "quadrant": "tools",
      "ring": "Trial",
    },
    {
      "description": "Унификации контракта интерфейсов различных слоев приложений",
      "moved": "-1",
      "name": "Гексагональная архитектура",
      "quadrant": "Techniques",
      "ring": "Assess",
    },
  ],
  "meta": {
    "date": "2021-06-12",
    "legend": "bla bla bla",
    "title": "tech radar js",
  },
  "quadrantAliases": {
    "languages-and-frameworks": "q1",
    "platforms": "q2",
    "techniques": "q4",
    "tools": "q3",
  },
  "quadrantTitles": {
    "q1": "Languages and frameworks",
    "q2": "Platforms",
    "q3": "Tools",
    "q4": "Techniques",
  },
}
`;

exports[`parser.js parse() 1`] = `
{
  "data": [
    {
      "description": "",
      "moved": 0,
      "name": "Nodejs",
      "quadrant": "q2",
      "quadrantTitle": "Platforms",
      "ring": "adopt",
    },
    {
      "description": "Статически, типизированный ЖС",
      "moved": 1,
      "name": "TypeScript",
      "quadrant": "q1",
      "quadrantTitle": "Languages and frameworks",
      "ring": "adopt",
    },
    {
      "description": "Статический анализатор кода",
      "moved": 0,
      "name": "codeclimate",
      "quadrant": "q3",
      "quadrantTitle": "Tools",
      "ring": "trial",
    },
    {
      "description": "Унификации контракта интерфейсов различных слоев приложений",
      "moved": -1,
      "name": "Гексагональная архитектура",
      "quadrant": "q4",
      "quadrantTitle": "Techniques",
      "ring": "assess",
    },
  ],
  "meta": {
    "date": "2021-06-18",
    "legend": "bla bla bla",
    "title": "work it",
  },
  "quadrantAliases": {
    "language": "q1",
    "languages-and-frameworks": "q1",
    "platforms": "q2",
    "techniques": "q4",
    "tools": "q3",
  },
  "quadrantTitles": {
    "q1": "Languages and frameworks",
    "q2": "Platforms",
    "q3": "Tools",
    "q4": "Techniques",
  },
}
`;

exports[`parser.js yamlReader 1`] = `
{
  "data": [
    {
      "description": "Статически типизированный ЖС",
      "moved": 1,
      "name": "TypeScript",
      "quadrant": "languages-and-frameworks",
      "ring": "Adopt",
    },
    {
      "description": null,
      "moved": null,
      "name": "Nodejs",
      "quadrant": "Platforms",
      "ring": "Adopt",
    },
    {
      "description": "Статический анализатор кода",
      "moved": 0,
      "name": "codeclimate",
      "quadrant": "tools",
      "ring": "Trial",
    },
    {
      "description": "Унификации контракта интерфейсов различных слоев приложений",
      "moved": -1,
      "name": "Гексагональная архитектура",
      "quadrant": "Techniques",
      "ring": "Assess",
    },
  ],
  "meta": {
    "date": "2021-06-11",
    "legend": "bla bla bla",
    "title": "tech radar js",
  },
  "quadrantAliases": {
    "languages-and-frameworks": "q1",
    "platforms": "q2",
    "techniques": "q4",
    "tools": "q3",
  },
  "quadrantTitles": {
    "q1": "Languages and frameworks",
    "q2": "Platforms",
    "q3": "Tools",
    "q4": "Techniques",
  },
}
`;
